fdo#75026: Sometimes we need to update grid view while not being active.

For example when "jumping to mark" in the non-active window triggered by
hyperlink in the active one.  The jump-to-mark command gets dispatched before
the new window is officially activated.

Change-Id: I4e9c126b061ee3af4440e36d1ba6d796eb1c3539